--- a/config/config_seg_lesion.json
+++ b/config/config_seg_lesion.json
@@ -1,7 +1,7 @@
 {
     "command": "train",
-    "gpu_ids": [4],
-    "path_output": "model_seg_lesion_mp2rage_",
+    "gpu_ids": [5],
+    "path_output": "/home/GRAMES.POLYMTL.CA/p101317/data_nvme_p101317/model_seg_lesion_mp2rage_",
     "model_name": "model_seg_lesion_mp2rage",
     "debugging": true,
     "object_detection_params": {
@@ -11,14 +11,14 @@
     "wandb": {
         "wandb_api_key": "9095e2bc9e4ab445d478c9c8a81759ae908be8c6",
         "project_name": "basel-mp2rage-lesion",
-        "group_name": "my_group",
-        "run_name": "run-2",
+        "group_name": "2D",
+        "run_name": "run-4",
         "log_grads_every": 100
     },
     "loader_parameters": {
         "path_data": ["/home/GRAMES.POLYMTL.CA/p101317/data_nvme_p101317/data_seg_mp2rage_20221212_175444/data_processed_lesionseg"],
         "subject_selection": {"n": [], "metadata": [], "value": []},
-        "target_suffix": ["_lesion-manual", "_lesion-manual3"],
+        "target_suffix": ["_lesion-manual"],
         "extensions": [".nii.gz"],
         "roi_params": {
             "suffix": null,
@@ -30,7 +30,7 @@
             "balance": {}
         },
         "slice_filter_params": {
-            "filter_empty_mask": false,
+            "filter_empty_mask": true,
             "filter_empty_input": true
         },
         "slice_axis": "axial",
@@ -48,7 +48,7 @@
         "test_fraction": 0.2
     },
     "training_parameters": {
-        "batch_size": 4,
+        "batch_size": 16,
         "loss": {
             "name": "DiceLoss"
         },
@@ -89,7 +89,7 @@
         "film_layers": [0, 1, 0, 0, 0, 0, 0, 0, 0, 0]
     },
     "Modified3DUNet": {
-        "applied": true,
+        "applied": false,
         "length_3D": [32, 64, 128],
         "stride_3D": [32, 64, 128],
         "attention": false,
@@ -115,26 +115,27 @@
     "transformation": {
         "Resample":
         {
-            "hspace": 1,
-            "wspace": 1,
+            "hspace": 0.75,
+            "wspace": 0.75,
             "dspace": 1
         },
         "CenterCrop": {
-            "size": [32, 64, 128]},
+            "size": [64, 64]},
+
         "RandomAffine": {
-            "degrees": 10,
-            "scale": [0.2, 0.2, 0.2],
-            "translate": [0.2, 0.2, 0.2],
+            "degrees": 5,
+            "scale": [0.1, 0.1],
+            "translate": [0.1, 0.1],
             "applied_to": ["im", "gt"],
             "dataset_type": ["training"]
         },
         "ElasticTransform": {
-			"alpha_range": [28.0, 30.0],
-			"sigma_range":  [3.5, 4.5],
-			"p": 0.1,
+            "alpha_range": [28.0, 30.0],
+            "sigma_range":  [3.5, 4.5],
+            "p": 0.1,
             "applied_to": ["im", "gt"],
             "dataset_type": ["training"]
-        },
-      "NormalizeInstance": {"applied_to": ["im"]}
+	},		    
+	"NormalizeInstance": {"applied_to": ["im"]}
     }
 }
