--- a/config/config_seg_lesion.json
+++ b/config/config_seg_lesion.json
@@ -1,6 +1,6 @@
 {
     "command": "train",
-    "gpu_ids": [5],
+    "gpu_ids": [4],
     "path_output": "/home/GRAMES.POLYMTL.CA/p101317/data_nvme_p101317/model_seg_lesion_mp2rage_",
     "model_name": "model_seg_lesion_mp2rage",
     "debugging": true,
@@ -11,14 +11,14 @@
     "wandb": {
         "wandb_api_key": "9095e2bc9e4ab445d478c9c8a81759ae908be8c6",
         "project_name": "basel-mp2rage-lesion",
-        "group_name": "2D",
-        "run_name": "run-4",
+        "group_name": "3D",
+        "run_name": "run-1",
         "log_grads_every": 100
     },
     "loader_parameters": {
-        "path_data": ["/home/GRAMES.POLYMTL.CA/p101317/data_nvme_p101317/data_seg_mp2rage_20221212_175444/data_processed_lesionseg"],
+        "path_data": ["/home/GRAMES.POLYMTL.CA/p101317/data_nvme_p101317/data_seg_mp2rage_20221217_170634/data_processed_lesionseg"],
         "subject_selection": {"n": [], "metadata": [], "value": []},
-        "target_suffix": ["_lesion-manual"],
+        "target_suffix": ["_lesion-manualHaris"],
         "extensions": [".nii.gz"],
         "roi_params": {
             "suffix": null,
@@ -89,9 +89,9 @@
         "film_layers": [0, 1, 0, 0, 0, 0, 0, 0, 0, 0]
     },
     "Modified3DUNet": {
-        "applied": false,
-        "length_3D": [32, 64, 128],
-        "stride_3D": [32, 64, 128],
+        "applied": true,
+        "length_3D": [32, 32, 64],
+        "stride_3D": [32, 32, 64],
         "attention": false,
         "n_filters": 8
     },
@@ -117,10 +117,10 @@
         {
             "hspace": 0.75,
             "wspace": 0.75,
-            "dspace": 1
+            "dspace": 0.75
         },
         "CenterCrop": {
-            "size": [64, 64]},
+            "size": [64, 64, 128]},
 
         "RandomAffine": {
             "degrees": 5,
