--- a/config/config_seg_lesion.json
+++ b/config/config_seg_lesion.json
@@ -9,7 +9,7 @@
         "wandb_api_key": "9095e2bc9e4ab445d478c9c8a81759ae908be8c6",
         "project_name": "basel-mp2rage-lesion",
         "group_name": "r20230127",
-        "run_name": "run-01",
+        "run_name": "seed11",
         "log_grads_every": 100
     },
     "loader_parameters": {
@@ -37,7 +37,7 @@
     },
     "split_dataset": {
         "fname_split": null,
-        "random_seed": 42,
+        "random_seed": 11,
         "split_method" : "participant_id",
         "data_testing": {"data_type": null, "data_value":[]},
         "balance": null,
